Uplift Paper version to 26.1.2
Upgraded Gradle to 9.5.1

Updated deprecated functions

General code clean up